# checking_code

./: .dockerignore  .gitignore  README.md  docker-compose.yml
services/checking_service/: .dockerignore  .env.example  alembic.ini  docker-compose.yml  dockerfile  pyproject.toml
services/checking_service/alembic/: env.py
services/checking_service/alembic/versions/2026/04/: 21_1342_26_602b80d7fdc7_init.py  25_1623_45_422b376ca248_init.py
services/checking_service/alembic/versions/2026/05/: 10_1638_12_42cd13d6978d_init.py  11_1850_38_fa100aba2e59_init.py  14_1921_03_e571dd983329_init.py
services/checking_service/docker/: entrypoint.sh
services/checking_service/src/checking_service/: main.py
services/checking_service/src/checking_service/application/: errors.py  pagination.py
services/checking_service/src/checking_service/application/dto/: evaluation.py  execution_case.py  input_case.py  judge.py  outbox.py  submission.py  test_case.py
services/checking_service/src/checking_service/application/mappers/: __init__.py  evaluation_mapper.py  execution_case_mapper.py  input_case_mapper.py  judge_request_mapper.py  outbox_message_mapper.py  submission_mapper.py
services/checking_service/src/checking_service/application/models/: enums.py  events.py  outbox.py  runner_result.py
services/checking_service/src/checking_service/application/ports/: __init__.py  judge.py  runner.py  task_dispatcher.py  task_service.py  unit_of_work.py
services/checking_service/src/checking_service/domain/: errors.py
services/checking_service/src/checking_service/infrastructure/: bootstrap.py  errors.py
services/checking_service/tests/: conftest.py
services/checking_service/tests/unit/application/: test_submission_mapper.py
services/checking_service/tests/unit/domain/: test_submission.py
services/task_service/: .env.example  dockerfile  pyproject.toml
services/task_service/alembic/: env.py
services/task_service/src/task_service/: main.py
services/task_service/src/task_service/application/: errors.py
services/task_service/src/task_service/domain/: errors.py
services/task_service/src/task_service/infrastructure/: errors.py
(+316 files in other folders)
