[project]
name = "checking_service"
version = "0.1.0"
description = ""
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "uvicorn[standard]>=0.44.0",
]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
